<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PostFragment">

    <Button
        android:id="@+id/postFragmentFollowButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/button_background"
        android:text="@string/followBtnNotFollowing"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/postFragmentProfilePicture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <ImageButton
        android:id="@+id/postFragmentLikeButton"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginStart="244dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/postFragmentNumberOfLikes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFragmentUsername"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_whatshot_red_50dp" />

    <ImageView
        android:id="@+id/postCloseFriends"
        android:layout_width="56dp"
        android:layout_height="43dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="@+id/postFragmentNumberOfLikes"
        app:srcCompat="@drawable/ic_people_outline_black_24dp" />


    <ImageView
        android:id="@+id/postFragmentPostImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="451dp"
        android:adjustViewBounds="true"
        android:contentDescription="Posted image"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/postFragmentLikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFragmentDescription" />

    <ImageView
        android:id="@+id/postFragmentDistanceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_place_red_50dp"
        app:layout_constraintBottom_toTopOf="@+id/postDateTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/postFragmentProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/postFragmentFollowButton"
        app:layout_constraintVertical_bias="0.663" />

    <TextView
        android:id="@+id/postFragmentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="568dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFragmentProfilePicture"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/postFragmentNumberOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:text="0"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFragmentPostImage"
        app:layout_constraintVertical_bias="0.989" />

    <TextView
        android:id="@+id/postDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date : Time"
        android:textAppearance="@style/TextAppearance.Compat.Notification.Time"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/postFragmentLikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postFragmentUsername"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/postFragmentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF9F9"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/postFragmentLikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postDateTime"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/postFragmentDistanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/postDateTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/postFragmentDistanceImage"
        app:layout_constraintTop_toBottomOf="@+id/postFragmentFollowButton"
        app:layout_constraintVertical_bias="0.619" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/postFragmentProfilePicture"
        android:layout_width="104dp"
        android:layout_height="98dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />


</androidx.constraintlayout.widget.ConstraintLayout>