<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4F4"
    tools:context=".fragment.ListUsersFragment">


    <TextView
        android:id="@+id/list_user_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="Title"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list_user_number"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="10dp"
        android:text="Number"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF" />

</FrameLayout>